docs/Network/Iptables/sit/sit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fpc-opd-admin
spec:
  selector:
    name: fpc-opd-admin
  ports:
    - name: http
      port: 80
      targetPort: 80
